--- a/Client/Pages/Planning/DivePlanning.razor
+++ b/Client/Pages/Planning/DivePlanning.razor
@@ -26,7 +26,7 @@
 </div>
 <div class="row">
     <div class="col-auto mb-3 card mx-auto">
-        <ul class="nav nav-pills">
+        <ul class="nav nav-pills card-transparent">
             <li class="nav-item">
                 <a class="nav-link active" data-toggle="pill" href="#ed">Emergency Decompression</a>
             </li>
@@ -46,7 +46,7 @@
                 <a class="nav-link" data-toggle="pill" href="#gr">General Rules</a>
             </li>
         </ul>
-        <div class="tab-content">
+        <div class="tab-content card-transparent">
             <div class="tab-pane container active" id="ed">
                 <p class="text-black">
                     <ul>
@@ -122,7 +122,7 @@
 <br />
 <div class="row">
     <div class="col-auto mb-3">
-        <div class="card card-block divegraphcard border-primary mb-3">
+        <div class="card card-block divegraphcard border-primary mb-3 card-transparent">
             <div class="card-header">
                 First Dive
             </div>
@@ -166,7 +166,7 @@
         </div>
     </div>
     <div class="col-auto mb-3">
-        <div class="card card-block divegraphcard border-primary mb-3">
+        <div class="card card-block divegraphcard border-primary mb-3 card-transparent">
             <div class="card-header">
                 Second Dive
             </div>
@@ -210,7 +210,7 @@
         </div>
     </div>
     <div class="col-auto mb-3">
-        <div class="card card-block divegraphcard border-primary mb-3">
+        <div class="card card-block divegraphcard border-primary mb-3 card-transparent">
             <div class="card-header">
                 Third Dive
             </div>
@@ -254,7 +254,7 @@
         </div>
     </div>
     <div class="col-auto mb-3">
-        <div class="card card-block divegraphcard border-primary mb-3">
+        <div class="card card-block divegraphcard border-primary mb-3 card-transparent">
             <div class="card-header">
                 Fourth Dive
             </div>
@@ -300,7 +300,8 @@
 </div>
 <br />
 <div class="row">
-    <div class="col-auto mb-4 card">
+    <div class="col-1"></div>
+    <div class="col-auto mb-3 card mx-auto">
         <ul class="nav nav-pills">
             <li class="nav-item">
                 <a class="nav-link active" data-toggle="pill" href="#ndlgd">No Decompression Limits and Group Designation</a>
@@ -312,7 +313,7 @@
                 <a class="nav-link" data-toggle="pill" href="#abtsne">Repetitive Dive Timetable</a>
             </li>
         </ul>
-        <div class="tab-content">
+        <div class="tab-content ">
             <div class="tab-pane container active float-left" id="ndlgd">
                 <TheDiveLog.Client.Pages.Partials.NDLChart></TheDiveLog.Client.Pages.Partials.NDLChart>
             </div>
