--- a/Client/Shared/NavMenu.razor
+++ b/Client/Shared/NavMenu.razor
@@ -13,16 +13,16 @@
     <Authorized>
         @{
             AppState.UserId = _userId;
-            AppState.User = context.User.Identity.Name;
+            //AppState.User = context.User.Identity.Name;
             AppState.IsAuthenticated = true;
         }
         <div class="@NavMenuCssClass" @onclick="ToggleNavMenu">
             <div class="scrollable-nav">
-                <div class="row">
+                @*<div class="row">
                     <div class="col-sm-12 text-center">
                         <a href="Identity/Account/Manage" class="long-email-address-css">@AppState.User</a>
                     </div>
-                </div>
+                </div>*@
                 <ul class="nav flex-column">
                     <li class="nav-item text px-2">
                         <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
