--- a/Client/wwwroot/css/app.css
+++ b/Client/wwwroot/css/app.css
@@ -254,15 +254,15 @@ app {
 /*#endregion*/
 
 /*#region Card Section*/
-
-/*#endregion*/
-.special-card {
+.card-transparent {
     background-color: transparent;
 }
+/*#endregion*/
+
 /*#region Lock table header Section*/
 
 .lh-table-container {
-    background-color: rgba(255,255,255, 1.0);
+    background-color: transparent;
     border: none;
     height: 68vh;
     /*margin: 10px auto;*/
@@ -273,6 +273,17 @@ app {
     min-height: 320px;
 }
 
+.lh-table-container-chart {
+    background-color: transparent;
+    border: none;
+    height: 68vh;
+    /*margin: 10px auto;*/
+    padding-top: 0;
+    position: relative;
+    width: 80vw;
+    min-width: 800px;
+    min-height: 320px;
+}
 
 .lh-table-container-inner {
     height: 100%;
@@ -288,7 +299,7 @@ app {
     right: 0;
     top: 0;
     width: 78vw;
-    min-width: 480px;
+    min-width: 765px;
     z-index: 10;
 }
 
