--- a/Client/Pages/Planning/DivePlanning.razor
+++ b/Client/Pages/Planning/DivePlanning.razor
@@ -301,7 +301,7 @@
 <br />
 <div class="row">
     <div class="col-1"></div>
-    <div class="col-auto mb-3 card mx-auto">
+    <div class="col-auto mb-3 card mx-auto card-transparent">
         <ul class="nav nav-pills">
             <li class="nav-item">
                 <a class="nav-link active" data-toggle="pill" href="#ndlgd">No Decompression Limits and Group Designation</a>
@@ -318,10 +318,10 @@
                 <TheDiveLog.Client.Pages.Partials.NDLChart></TheDiveLog.Client.Pages.Partials.NDLChart>
             </div>
             <div class="tab-pane container fade float-left" id="sic">
-                <TheDiveLog.Client.Pages.Partials.SicChart></TheDiveLog.Client.Pages.Partials.SicChart>
+                <TheDiveLog.Client.Pages.Partials.SICChart></TheDiveLog.Client.Pages.Partials.SICChart>
             </div>
             <div class="tab-pane container fade float-left" id="abtsne">
-                <h6>table 3</h6>
+                <TheDiveLog.Client.Pages.Partials.RDTChart></TheDiveLog.Client.Pages.Partials.RDTChart>
             </div>
         </div>
     </div>
