--- a/Client/Shared/NavMenu.razor
+++ b/Client/Shared/NavMenu.razor
@@ -1,6 +1,7 @@
 ﻿@inject AuthenticationStateProvider AuthenticationStateProvider
 @inject NavigationManager Navigation
 @inject SignOutSessionStateManager SignOutManager
+@inject HttpClient http
 
 <div class="top-row pl-4 navbar navbar-dark">
     <img src="css/Images/scuba_diver.png" asp-append-version="true" width="50" />
@@ -13,16 +14,10 @@
     <Authorized>
         @{
             AppState.UserId = _userId;
-            //AppState.User = context.User.Identity.Name;
             AppState.IsAuthenticated = true;
         }
         <div class="@NavMenuCssClass" @onclick="ToggleNavMenu">
             <div class="scrollable-nav">
-                @*<div class="row">
-                    <div class="col-sm-12 text-center">
-                        <a href="Identity/Account/Manage" class="long-email-address-css">@AppState.User</a>
-                    </div>
-                </div>*@
                 <ul class="nav flex-column">
                     <li class="nav-item text px-2">
                         <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
@@ -54,11 +49,6 @@
                             <span class="oi oi-list" aria-hidden="true"></span> Dive Charts
                         </NavLink>
                     </li>
-                    @*<li class="nav-item px-2">
-                        <NavLink class="nav-link" href="modal-test">
-                            <span class="oi oi-list" aria-hidden="true"></span> Modal Test
-                        </NavLink>
-                    </li>*@
                     <li class="nav-item px-2">
                         <NavLink class="nav-link" @onclick="BeginSignOut">
                             <span class="oi oi-account-logout" aria-hidden="true"></span> Log out
@@ -94,6 +84,8 @@
 </AuthorizeView>
 
 @code {
+    private DiverInformation dvr { get; set; }
+    private DiverView diverview { get; set; }
     private bool collapseNavMenu = true;
     private string NavMenuCssClass => collapseNavMenu ? "collapse" : null;
     private string _userId;
@@ -113,6 +105,17 @@
         {
             _userId = user.FindFirst(c => c.Type == "sub")?.Value;
         }
+
+        diverview = await http.GetFromJsonAsync<DiverView>($"api/diver/byUserId?userid={_userId}");
+
+        dvr = diverview.Diver;
+
+        if (dvr.DiverName != string.Empty)
+        {
+            AppState.User = dvr.DiverName;
+        }
+
+        AppState.Mesurement = dvr.MeasurementID;
     }
 
     private void ToggleNavMenu()
