Added View Images

--- a/Client/Pages/Images/ViewImages.razor
+++ b/Client/Pages/Images/ViewImages.razor
@@ -1,6 +1,12 @@
 ﻿@page "/viewimages"
 
-<h3>View Images</h3>
+<div class="container-fluid">
+    <div class="row">
+        <TheDiveLog.Client.Pages.Partials.AllImages></TheDiveLog.Client.Pages.Partials.AllImages>
+    </div>
+    <div id="upload" class="row">
+    </div>
+</div>
 
 @code {
 
